added the first blog

--- a/Lindex.html
+++ b/Lindex.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
+    <link rel="stylesheet" href="styles/Blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>
+            My first Website
+        </h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum harum magni libero commodi impedit. Culpa molestiae voluptate, expedita reiciendis adipisci provident repellendus amet libero corrupti consequatur quaerat maxime ullam architecto.</p>
+    </div>
 </body>
 </html>
