--- a/Lindex.html
+++ b/Lindex.html
@@ -13,5 +13,17 @@
         </h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum harum magni libero commodi impedit. Culpa molestiae voluptate, expedita reiciendis adipisci provident repellendus amet libero corrupti consequatur quaerat maxime ullam architecto.</p>
     </div>
+    <div>
+        <h3>
+            My second blog
+        </h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum harum magni libero commodi impedit. Culpa molestiae voluptate, expedita reiciendis adipisci provident repellendus amet libero corrupti consequatur quaerat maxime ullam architecto.</p>
+    </div>
+    <div>
+        <h3>
+            My third blog
+        </h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum harum magni libero commodi impedit. Culpa molestiae voluptate, expedita reiciendis adipisci provident repellendus amet libero corrupti consequatur quaerat maxime ullam architecto.</p>
+    </div>
 </body>
 </html>
