--- a/Lindex.html
+++ b/Lindex.html
@@ -25,5 +25,13 @@
         </h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum harum magni libero commodi impedit. Culpa molestiae voluptate, expedita reiciendis adipisci provident repellendus amet libero corrupti consequatur quaerat maxime ullam architecto.</p>
     </div>
+    <div>
+        <h3>How to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m "Text"</li>
+            <li>git push </li>
+        </ul>
+    </div>
 </body>
 </html>
