--- a/index.html
+++ b/index.html
@@ -33,5 +33,8 @@
             <li>git push </li>
         </ul>
     </div>
+    <div><h3>Lion er chobi</h3>
+    <img src="images/shutterstock_2461984615.avif" alt="sorry re">
+    </div>
 </body>
 </html>
